exports[`@typescript-eslint/no-magic-numbers > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 171.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 56.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 10n.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 18
        },
        "end": {
          "line": 1,
          "column": 19
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 22
        },
        "end": {
          "line": 1,
          "column": 24
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 3.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 28
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 4.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 33
        },
        "end": {
          "line": 1,
          "column": 34
        }
      }
    }
  ],
  "errorCount": 4,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 28
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 22
        },
        "end": {
          "line": 5,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 4
        },
        "end": {
          "line": 3,
          "column": 5
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 3.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 8
        },
        "end": {
          "line": 3,
          "column": 9
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 9
        },
        "end": {
          "line": 3,
          "column": 10
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 13
        },
        "end": {
          "line": 3,
          "column": 14
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 17
        },
        "end": {
          "line": 3,
          "column": 18
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 21
        },
        "end": {
          "line": 3,
          "column": 22
        }
      }
    }
  ],
  "errorCount": 4,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 23`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 3n.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 14
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 24`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -4n.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 25`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 5.6.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 26`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -7.8.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 27`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 10.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 28`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -188.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 29`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 100.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 15
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 3.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 3,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 30`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -30000.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 31`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.000005.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 32`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -7e-8.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 33`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 110.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 34`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -31000.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 35`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.0000051.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 13
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 8
        },
        "end": {
          "line": 3,
          "column": 9
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1000.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 12
        },
        "end": {
          "line": 3,
          "column": 16
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 9
        },
        "end": {
          "line": 5,
          "column": 11
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 10
        },
        "end": {
          "line": 6,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 3,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 3,
          "column": 16
        },
        "end": {
          "line": 3,
          "column": 17
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 2.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 17
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 3.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 30
        },
        "end": {
          "line": 5,
          "column": 31
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 4.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 23
        },
        "end": {
          "line": 6,
          "column": 24
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -5.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 7,
          "column": 16
        },
        "end": {
          "line": 7,
          "column": 18
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 6.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 8,
          "column": 17
        },
        "end": {
          "line": 8,
          "column": 18
        }
      }
    },
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 100n.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 9,
          "column": 24
        },
        "end": {
          "line": 9,
          "column": 28
        }
      }
    }
  ],
  "errorCount": 7,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: 0.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 17
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;

exports[`@typescript-eslint/no-magic-numbers > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-magic-numbers",
      "messageId": "noMagic",
      "message": "No magic number: -1.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 16
        },
        "end": {
          "line": 1,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 7,
  "ruleCount": 1
}
`;
